--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     url: jdbc:mariadb://localhost:3306/jpa_test
     username: root
     password: 1234
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -10,3 +11,7 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+
+  redis:
+    url: sicial-todo-backend-redis.t5atgo.ng.0001.apn2.cache.amazonaws.com
+    port: 6379
