--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 spring:
+  kafka:
+    bootstrap-servers: 여기에카프카엔드포인트
   datasource:
-    url: jdbc:mariadb://localhost:3306/jpa_test
+    url: jdbc:mariadb://여기에디비엔드포인트:3306/social_todo_backend
     username: root
     password: 1234
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true
